# pulsegrid

./: IMPLEMENTATION_COMPLETE.md  PHASE_2_STUBS.md  PulseGrid_Complete_Blueprint.md
.githooks/: pre-push
.github/workflows/: ci-manual-self-hosted.yml  deploy-manual-self-hosted.yml
api-gateway/: .gitignore  jest.config.js  package-lock.json  package.json  tsconfig.json
api-gateway/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  dto.ts  events.gateway.spec.ts  events.gateway.ts  main.ts  management-api-key.guard.ts  rate-limit.service.ts
api-gateway/src/ai/: ai.controller.ts  ai.module.ts
api-gateway/src/analytics/: analytics.controller.ts  analytics.module.ts  analytics.service.ts
api-gateway/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  auth.store.ts  auth.types.ts  jwt-auth.guard.ts  mfa.controller.ts  mfa.service.ts
api-gateway/src/beta/: beta.controller.ts  beta.module.ts
api-gateway/src/connectors/: connectors.controller.ts  connectors.module.ts  connectors.service.ts
api-gateway/src/email/: email.service.ts
api-gateway/src/events/: events.controller.ts  events.module.ts  events.service.ts
api-gateway/src/flows/: flow-validation.service.ts  flows.controller.ts  flows.module.ts  flows.service.ts
api-gateway/src/graphql/: README.md  dataloaders.ts  graphql.module.ts  resolvers.ts  schema.graphql  types.ts
api-gateway/src/market/: market.controller.ts  market.module.ts
api-gateway/src/proto/: pulsecore.proto
api-gateway/src/users/: daily-digest.service.ts  users.controller.ts  users.module.ts  users.service.ts
core/: Cargo.toml
core/core-ai/: Cargo.toml
core/core-ai/src/: lib.rs
core/core-cli/: Cargo.toml
core/core-cli/src/: main.rs
core/core-connectors/: Cargo.toml
core/core-connectors/src/: lib.rs
core/core-engine/: .env  Cargo.toml
core/core-engine/migrations/: 20260423131459_init_schema.sql  20260424000000_workspace_secrets.sql  20260425093000_auth_refresh_tokens.sql  20260426120000_phase1_fixes.sql  20260427000000_market_templates.sql  20260427100000_billing_subscriptions.sql  20260427200000_public_beta.sql  20260429130000_usage_and_ai_patterns.sql  20260430120000_template_reviews.sql
core/core-engine/src/: cache.rs  executor.rs  fix.py  grpc.rs  main.rs  models.rs
core/core-engine/tests/: executor_integration.rs
core/core-proto/: Cargo.toml  build.rs
core/core-proto/proto/: pulsecore.proto
core/core-proto/src/: lib.rs
core/core-vault/: Cargo.toml
core/core-vault/src/: lib.rs
core/core-vm/: Cargo.toml
core/core-vm/src/: lib.rs
dashboard/: .gitignore  package-lock.json  package.json  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/analytics/: page.tsx
dashboard/components/: app-shell.tsx  flow-canvas.tsx
dashboard/lib/: api.ts  oauth-connectors.ts  store.ts
docs/: CI_CD_COST_SAFE.md
infra/clickhouse/: init.sql
mobile-companion/: App.js  app.json  package-lock.json  package.json
mobile-companion/lib/: api.ts  store.ts
mobile-companion/services/: api.ts
mobile-companion/store/: flowStore.ts
mobile_app/: pubspec.yaml
mobile_app/lib/: main.dart
mobile_app/linux/: CMakeLists.txt
mobile_app/test/: widget_test.dart
scripts/: ci_local.sh  deploy.sh  setup_git_hooks.sh
(+35 files in other folders)
