[package]
name = "core-connectors"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = "1.40"
urlencoding = "2.1"
