[package]
name = "core-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
core-connectors = { version = "0.1.0", path = "../core-connectors" }
core-proto = { version = "0.1.0", path = "../core-proto" }
core-vault = { version = "0.1.0", path = "../core-vault" }
core-vm = { version = "0.1.0", path = "../core-vm" }
dotenvy = "0.15.7"
prost = "0.13"
redis = { version = "0.27", features = ["streams", "tokio-comp", "aio"] }
rhai = { version = "1.24.0", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.40", features = ["full", "macros"] }
tokio-stream = "0.1.18"
tonic = "0.12"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
